--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ android {
     compileSdkVersion 23
     buildToolsVersion "22.0.1"
 
+    lintOptions {
+        abortOnError false
+    }
+
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
